toys/compiler/tmp/PropertyFile.g4
grammar PropertyFile;

@members {
    void startFile(){}
    void finishFile(){}
    void defineProperty(Token name, Token value){}
}

file    : {startFiule();} prop+ {finishFile();} ;
prop    : ID '=' STRING '\n' {defineProperty($ID, $STRING);} ;
ID      : [a-z]+ ;
STRING  : '"' .*? '"' ;
